force-app/main/default/objects/Roaster__c/fields/Make_Up_Count__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Count__c</fullName>
    <label>Make-Up Count</label>
    <summaryFilterItems>
        <field>Attendance__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Make-up</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>