force-app/main/default/objects/Roaster__c/fields/Session_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Session_Order_Number__c</fullName>
    <label>Session Order Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>