force-app/main/default/objects/Roaster__c/fields/Total_Present_For_Make_Up__c.field-meta.xml
<CustomField>
    <fullName>Total_Present_For_Make_Up__c</fullName>
    <label>Total Present For Make-Up</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Present</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Make-up</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>